added jvm options and changed some plugin versions