@@ -2,3 +2,5 @@ gscf
 ====
 
 Generic Study Capture Framework
+
+JVM options: -Xms32m -Xmx512m -XX:MaxPermSize=750m -XX:MaxHeapFreeRatio=70 -XX:MaxGCPauseMillis=10 -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled
